--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@cantonjs/react-scroll-view": "^0.4.2",
     "bootstrap": "5.1.3",
     "node-sass": "4.13.1",
     "react": "16.8.0",
