--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "1.6.4",
     "react-dom": "16.8.0",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "2.0.3"
   },
   "devDependencies": {},
